<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_store"
        android:layout_marginTop="22dp"
        android:layout_marginStart="10dp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"

        android:hint="@string/cost"
        android:minHeight="48dp"
        android:textColorHint="#757575">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNumber"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_service"
            android:layout_marginTop="32dp"
            android:layout_marginStart="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_was"
        android:textSize="16sp"
        style="@style/Widget.TipCalculator.TextView"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"/>
    </LinearLayout>
    <RadioGroup
        android:id="@+id/rdGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/amazing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing"
            style="@style/Widget.TipCalculator.CompoundButton.RadioButton"
            android:onClick="tipFunc"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp" />
        <RadioButton
            android:id="@+id/good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good"
            style="@style/Widget.TipCalculator.CompoundButton.RadioButton"
            android:layout_marginTop="16dp"
            android:onClick="tipFunc"
            android:layout_marginStart="32dp"/>
        <RadioButton
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            style="@style/Widget.TipCalculator.CompoundButton.RadioButton"
            android:onClick="tipFunc"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"/>

    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_round"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roundUp"
            android:textSize="14sp"
            style="@style/Widget.TipCalculator.TextView"
            android:layout_marginLeft="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="end">

            <Switch
                android:id="@+id/round"
                android:layout_marginTop="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/calc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calc" />
    <TextView
        android:id="@+id/showTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipAmount"
        android:layout_marginEnd="8dp"
        style="@style/Widget.TipCalculator.TextView"
        android:layout_gravity="end"/>
    </LinearLayout>
</ScrollView>

